2013-07-02  Jan Djärv  <jan.h.d@swipnet.se>

	* term/ns-win.el (display-format-alist): Use .* (Bug#14765).

2013-07-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* wid-edit.el (widget-default-get): Don't modify widget (Bug#14738).

2013-07-01  Juanma Barranquero  <lekktu@gmail.com>

	* desktop.el (desktop-restore-frames): Rename from desktop-save-windows.
	(desktop-restore-in-current-display): New customization option.
	(desktop--excluded-frame-parameters): Add `font'.
	(desktop--save-frames): Rename from desktop--save-windows.
	(desktop--restore-in-this-display-p): New function.
	(desktop--make-full-frame): Remove unwanted width/height from
	full(width|height) frames.
	(desktop--restore-frames): Rename from desktop--restore-windows.
	Obey desktop-restore-current-display.  Do not delete old frames or
	select a new frame unless we were able to restore at least one frame.

2013-06-30  Michal Nazarewicz  <mina86@mina86.com>

	* files.el (find-file-noselect): Simplify conditional expression.

	* remember.el (remember-append-to-file):
	Don't mix `find-buffer-visiting' and `get-file-buffer'.

	Add `remember-notes' function to store random notes across Emacs
	restarts.
	* remember.el (remember-data-file): Add :set callback to affect
	notes buffer (if any).
	(remember-notes): New command.
	(remember-notes-buffer-name, bury-remember-notes-on-kill):
	New defcustoms for the `remember-notes' function.
	(remember-notes-save-and-bury-buffer): New command.
	(remember-notes-mode-map): New variable.
	(remember-mode): New minor mode.
	(remember-notes--kill-buffer-query): New function.
	* startup.el (initial-buffer-choice): Add notes to custom type.

2013-06-30  Eli Zaretskii  <eliz@gnu.org>

	* bindings.el (right-char, left-char): Don't call sit-for, this is
	no longer needed.  Use arithmetic comparison only for numerical
	arguments.

	* international/mule-cmds.el (select-safe-coding-system):
	Handle the case of FROM being a string correctly.  (Bug#14755)
